--- a/styles/main.css
+++ b/styles/main.css
@@ -10,14 +10,19 @@ main {
   background-repeat: no-repeat;
   width: 35%;
   height: 35%;
-  background-size: 100%;
-  padding: 90px 90px 90px 45px;
+  background-size: 100% 100%;
+  padding: 5% 2%;
   box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
 }
 
 .login-container .heart {
-  width: 150px;
-  margin-right: 50px;
+  max-width: 150px;
+  width: 30%;
+  margin-right: 16px;
 }
 
 #login-form {
@@ -32,8 +37,7 @@ main {
 }
 
 .login-container .login-button {
-  width: 35%;
-  height: 100%;
+  width: 100px;
   font-size: 24px;
 }
 
@@ -44,14 +48,41 @@ main {
   width: 50%;
   height: 100%;
   margin: 0 auto;
+  padding: 0 4%;
+  box-sizing: border-box;
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
 #todo-form {
   position: absolute;
-  bottom: 100px;
-  left: 50px;
+  bottom: 6%;
+  right: 5%;
+  width: 90%;
+}
+
+#todo-form .todo-input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 8px;
+  font-size: 32px;
+}
+
+.todo-container #todo-list {
+  position: absolute;
+  top: 15%;
+  width: 86%;
+  height: 60%;
+  overflow-y: auto;
+
+}
+
+.todo-container #todo-list li {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 8px;
+  border-bottom: 1px solid #999;
+  font-size: 24px;
 }
 
 .todo-app-button {
