Update: 날씨 위치 변경

--- a/styles/header.css
+++ b/styles/header.css
@@ -5,7 +5,14 @@
   padding: 32px;
 }
 
+.header .today-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .header .clock {
+  margin-top: 8px;
   font-size: 60px;
 }
 
